# ai-finder

./: .gitignore  README.md  chat.py  config_manager.py  content_embedder.py  embeddings.py  indexer.py  ingester.py  keywords.py  page.py  pyproject.toml  rag.py  requirements.txt  run_test_llm.py  run_test_search.py  run_worker.py  semantic_search.py  test.py  test_llm.py  test_search.py  worker.py
db/: schema.sql  seeds.sql
db/queries/: config.py  content.py  embedding.py  fetcher.py  link.py  page.py  search.py
fetcher/: api_client.py  base_fetcher.py  factory.py  html_scraper.py
fetcher/html/: content_fetcher.py  fetcher.py  page_fetcher.py  scraper.py
